--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -15,7 +15,7 @@ permissions:
 
 env:
   GO_VERSION: 1.23
-  APP_NAME: "472-fe-cicd"
+  APP_NAME: "472-be-cicd"
 
 jobs:
   build:
@@ -27,7 +27,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-dept: 0
 
       - name: "Login to Docker Hub"
         uses: docker/login-action@v3
@@ -93,3 +93,4 @@ jobs:
           name: Release ${{ env.NEW_TAG }}
           draft: false
           prerelease: false
+
